--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,10 +17,6 @@ jobs:
           node-version-file: .nvmrc
           registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: npm test
-        env:
-          OPENSEA_API_KEY: ${{ secrets.OPENSEA_API_KEY }}
-          ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
